[project]
name = "guardant-health-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.115.5",
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "requests>=2.34.1",
    "starlette>=0.41.3",
    "streamlit>=1.57.0",
    "uvicorn[standard]==0.32.1",
]
